--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.skydt.matematiskvgttab">
+    package="com.skydt.weightcontrol">
 
     <application
         android:allowBackup="true"
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activities.MainMenuActivity"
+            android:name="com.skydt.weightcontrol.activities.MainMenuActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
@@ -20,23 +20,24 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.RegisterWeightActivity"
+            android:name="com.skydt.weightcontrol.activities.RegisterWeightActivity"
             android:label="@string/indtast_vægt"
+            android:windowSoftInputMode="adjustResize"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".activities.DietSelectionActivity"
+            android:name="com.skydt.weightcontrol.activities.DietSelectionActivity"
             android:label="@string/vælg_diæt"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".activities.DietCreationActivity"
+            android:name="com.skydt.weightcontrol.activities.DietCreationActivity"
             android:label="@string/opret_diæt"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".activities.DayActivity"
+            android:name="com.skydt.weightcontrol.activities.DayActivity"
             android:label="@string/dag_info"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".activities.DietActivity"
+            android:name="com.skydt.weightcontrol.activities.DietActivity"
             android:label="@string/diæt_info"
             android:screenOrientation="portrait"/>
     </application>
