--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.skydt.weightcontrol.activities.MainMenuActivity"
+            android:name=".activities.MainMenuActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
@@ -20,27 +20,31 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.skydt.weightcontrol.activities.RegisterWeightActivity"
+            android:name=".activities.InformationActivity"
+            android:label="@string/information"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activities.RegisterWeightActivity"
             android:label="@string/indtast_vægt"
-            android:windowSoftInputMode="adjustResize"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize" />
         <activity
-            android:name="com.skydt.weightcontrol.activities.DietSelectionActivity"
+            android:name=".activities.DietSelectionActivity"
             android:label="@string/vælg_diæt"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
-            android:name="com.skydt.weightcontrol.activities.DietCreationActivity"
+            android:name=".activities.DietCreationActivity"
             android:label="@string/opret_diæt"
-            android:windowSoftInputMode="adjustResize"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize" />
         <activity
-            android:name="com.skydt.weightcontrol.activities.DayActivity"
+            android:name=".activities.DayActivity"
             android:label="@string/dag_info"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
-            android:name="com.skydt.weightcontrol.activities.DietActivity"
+            android:name=".activities.DietActivity"
             android:label="@string/diæt_info"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
