--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.InformationActivity"
-            android:label="@string/information"
+            android:name=".activities.GuideActivity"
+            android:label="@string/guide"
             android:screenOrientation="portrait"/>
         <activity
             android:name=".activities.RegisterWeightActivity"
