--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,18 @@
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
+            android:name=".activities.InformationActivity"
+            android:label="@string/information"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".activities.GuideActivity"
             android:label="@string/guide"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.RegisterWeightActivity"
             android:label="@string/indtast_vægt"
